welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
  if (vuBiscuit() == true)
      ^Program:4: error: not found: value biscuit
      return biscuit
             ^Program:6: error: not found: value biscuit
    return biscuit
           ^