welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
  if (vuBiscuit() == true)
      return biscuit
	else{
    return biscuit
  }
}
